<resources>
    <string name="app_name">2021_Wedge</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_join">FullscreenActivity</string>
    <string name="todo">TODO</string>
    <string name="개인정보수정">개인 정보 수정</string>
    <string name="나의감자키우기">나의 감자 키우기</string>
    <string name="찜한가게">찜한 가게</string>
    <string name="설정">설정</string>
    <string name="도움말">도움말(FAQ)</string>
    <string name="공지사항">공지사항</string>
    <string name="오늘하루는맛있었나요">오늘 하루는 맛있었나요?</string>
    <string name="확인">확인</string>
    <string name="새비밀번호입력">새 비밀번호를 입력하세요</string>
    <string name="새로운이름입력">새로운 이름을 입력하세요</string>
    <string name="새폰번호입력">새로운 핸드폰 번호를 입력하세요</string>
    <string name="다시비번입력">다시 비밀번호를 입력하세요</string>
    <string name="개발자들의이야기">개발자들의 이야기</string>
    <string name="title_activity_search2">FullscreenActivity</string>
    <string name="title_activity_enter_page">FullscreenActivity</string>
    <string name="title_activity_onetalking">FullscreenActivity</string>
    <string name="title_activity_waiting_list">FullscreenActivity</string>
    <string name="title_activity_waitinglist">FullscreenActivity</string>
    <string name="title_activity_item">FullscreenActivity</string>
    <string name="title_activity_list_item">FullscreenActivity</string>
    <string name="title_activity_storejoin1">FullscreenActivity</string>
    <string name="title_activity_storejoin2">FullscreenActivity</string>
    <string name="title_activity_storesublist">FullscreenActivity</string>
    <string name="title_activity_stores_list">FullscreenActivity</string>
    <string name="title_activity_notice">FullscreenActivity</string>
    <string name="title_activity_fixmyinfo">FullscreenActivity</string>
    <string name="waiting">대기 인원 수를 입력해 주세요</string>
    <string name="num">숫자 입력</string>
    <string name="c">취소</string>
    <string name="j">줄서기</string>
    <string name="now">현재 줄선 가게</string>
    <string name="table">테이블 정보 입력</string>
    <string name="hpotato">햇감자</string>
    <string name="bpotato">바삭감자</string>
    <string name="wpotato">웨지감자</string>
    <string name="a">자라나는 개발자들에게</string>
    <string name="b">힘이 되어주세요</string>
    <string name="d">당신의 기부 덕분에 더 좋은 서비스를 향해 항해합니다</string>
    <string name="_352_1503_3033_23">농협 : 352-1503-3033-23</string>
    <string name="eabf">고로킹</string>
    <string name="vf">3</string>
    <string name="fqv">TODO</string>
    <string name="bsf">TODO</string>
    <string name="sbed">대기 팀 : </string>
    <string name="aersvf">FAQ</string>
    <string name="rgsfev">Q. 감자 등급 올리려면 어떻게 해야 하나요?</string>
    <string name="hrfe">A. 어플 이용이 높을 수록, 리뷰를 많이 작성할수록 등급 점수가 높아집니다.</string>
    <string name="hdgrfsbdvh">Q. 여러 가게에 줄서도 되나요?</string>
    <string name="fre">A. 네, 가능합니다. 줄서기 중도 취소도 가능합니다.</string>
    <string name="grfrs">Q. 안되는 기능이 있어요, 어디로 문의하면 되나요?</string>
    <string name="hgfv">A. 모든 문의는 \'wedgepotato@gmail.com\' 으로 문의사항을 담은 메일을 남겨주시면 빠른 확인 후 조치를 취할 예정입니다.</string>
    <string name="dhrsgfe">Q. 회원 탈퇴는 어떻게 하나요?</string>
    <string name="mfhdgrsef">A. 회원 탈퇴는 \'wedgepotato@gmail.com\' 으로 요청을 주시면 빠르게 처리해드립니다.</string>
    <string name="mhfg">나의 감자찜 가게</string>
    <string name="hgr">엽기떡볶이 성신여대점</string>
    <string name="mfhxbg">짜장면</string>
    <string name="hgbxfd">TextView</string>
    <string name="hgfsre">님의 감자는...</string>
    <string name="hgdxbfzs">웨지 감자가 되기 위해서는... \nㅇ번의 리뷰 작성이 필요해요~</string>
    <string name="mfhdrsgfes">리뷰 작성 횟수 : ㅇ 번</string>
    <string name="gbf">감자의 성장기 한 눈에 보기</string>
    <string name="dn">나의 감자찜 가게</string>
    <string name="bgfd">회원가입</string>
    <string name="bafsV">아이디</string>
    <string name="vff">비밀번호</string>
    <string name="afsv">이름</string>
    <string name="cxcfdsfaX">휴대폰 번호</string>
    <string name="szcgava">완료</string>
    <string name="acfx">TextView</string>
    <string name="acfafbgra">님의 감자는...</string>
    <string name="fvAXFr">TextView</string>
    <string name="fdvaedf">님의 감자는...</string>
    <string name="sf">등급 상승!!</string>
    <string name="cxfrad">아이디</string>
    <string name="sdcfga">비밀번호</string>
    <string name="sgcfar">회원가입</string>
    <string name="xcfrz">로그인</string>
    <string name="bgsfdcxzv">사장님이신가요?</string>
    <string name="hgsfx">X</string>
    <string name="sdaf">가입자 정보를 골라주세요.</string>
    <string name="dgsf">일반 회원 회원가입</string>
    <string name="HSRGD">사장님 회원가입</string>
    <string name="BSF">공지사항</string>
    <string name="WCSD">우리 \'웨지(웨이팅은 지루해)\'는 기다림의 불편함을 해결하고, 좀 더 효율적이고 즐거운 가게 이용을 위해 개발된 어플입니다. \n이용자 여러분들의 하루가 기다림없는 운좋은 순간의 연속이기를 바랍니다.</string>
    <string name="DHBSGARF">From. 웨지감자</string>
    <string name="BAFVd">자라나는 개발자들에게</string>
    <string name="SDCZVF">힘이 되어주세요</string>
    <string name="DCSZAV">당신의 기부 덕분에 더 좋은 서비스를 향해 항해합니다</string>
    <string name="Zxdcs">농협 : 352-1503-3033-23</string>
    <string name="BXD">한줄 리뷰 작성</string>
    <string name="SGDVZDF">나의 별점은...</string>
    <string name="GAE">가게에 대한 한줄 리뷰를 남겨주세요.\작성한 후기는 다른 사용자가 볼 수 있습니다.</string>
    <string name="ADFZAVRA">등록</string>
    <string name="ERVFS">취소</string>
    <string name="EAFV">Review</string>
    <string name="Fa">리뷰 작성하기</string>
    <string name="SCD">테이블 수 입력</string>
    <string name="DC">테이블 수 입력</string>
    <string name="ACGFVZD">가게 운영 시간</string>
    <string name="BZCswf">가게 운영 시간</string>
    <string name="VDAFV">오픈 시간 설정</string>
    <string name="SZGRFE">마감 시간 설정</string>
    <string name="WSAfes">오픈 :</string>
    <string name="SAF">마감 :</string>
    <string name="fswd">사장님 한마디</string>
    <string name="asadf">사장님 한마디</string>
    <string name="aWfxecD">입력</string>
    <string name="AWVSA">메뉴 수정</string>
    <string name="AWXdcF">메뉴 수정</string>
    <string name="XZSGECFR">추가할 메뉴를 입력하세요</string>
    <string name="SEAGWVF">항목 추가</string>
    <string name="SDGZAfswd">회원가입</string>
    <string name="DBSRGZDFEA">아이디</string>
    <string name="SZGAF">비밀번호</string>
    <string name="BSAFX">이름</string>
    <string name="SGZCFEA">휴대폰 번호</string>
    <string name="BVGCAF">다음</string>
    <string name="ZSDFV">가게 등록하기</string>
    <string name="SADF">가게명 입력</string>
    <string name="AF">가게명</string>
    <string name="bzfd">가게 도로명 주소 입력</string>
    <string name="bsfgza">주소 입력</string>
    <string name="xbfgszd">가게 등록하기</string>
    <string name="dsgf">TextView</string>
    <string name="xfdsza">감자의 성장 일대기</string>
    <string name="dxbgf">햇감자</string>
    <string name="bfgsaw">땅에서 막 나온 햇감자.\n나의 변신은 무궁무진하다.\n그 중에서도 가장 멋진 웨지 감자로 거듭날 것이다!</string>
    <string name="sgzfe">바삭 감자</string>
    <string name="drsgefd">웨지 감자가 되기 위한 관문.\n맛집에 대한 뜨거운 열기에\n익어버려 내 몸이 바삭해졌다.\n다른 감자들과는 달라달라~!</string>
    <string name="hgsfd">웨지 감자</string>
    <string name="cgrsfe">날카롭고도 동글한 옆태가 매력적인 웨지 감자로 재탄생!! \n화려한 분신술까지 연마했다.\n웨지의 능력을 뽐낼 시간!</string>
    <string name="geafsc">엽기 떡볶이 성신여대점</string>
    <string name="gfcaeswdc">현재 대기팀 :</string>
    <string name="weargfsb">count</string>
    <string name="adrsfd">영업 시간 :</string>
    <string name="wefszc">11:00 ~ 22:00</string>
    <string name="rafwc">새로고침</string>
    <string name="AWEDFC">웨이팅 대기 목록</string>
    <string name="sawrf">TextView</string>
    <string name="evsza">TextView</string>
    <string name="ewafzv">입장</string>
    <string name="weaF"><![CDATA[-> 바삭 웨지]]></string>
    <string name="czfv">아이디</string>
    <string name="cWfscd"> 님</string>
    <string name="AFA">검색할 가게 입력</string>
    <string name="AFWE">전체 가게</string>
    <string name="FDAV">TextView</string>
    <string name="WERG">삭제</string>
    <string name="GRAE">TextView</string>
    <string name="EWRFER">TextView</string>
    <string name="EGRFAWER">동대문엽기떡볶이 성신여대점</string>
    <string name="EFR">대기 번호 :</string>
    <string name="WREG">TextView</string>
    <string name="VEARE">인원 :</string>
    <string name="RAGRE">TextView</string>
    <string name="GAEAER">별점 :</string>
    <string name="AGEF">Textview</string>
    <string name="WEAF">TextView</string>
    <string name="FVGAEDR">몇 인석 입니까?</string>
    <string name="VGARE">테이블 개수를 입력하세요.</string>
    <string name="FAE">동대문엽기떡볶이 성신여대점</string>
    <string name="save">저장</string>
    <string name="fixmyinfo">개인 정보 수정</string>
    <string name="fixmyinfo2">개인 정보 수정</string>
    <string name="rev_del">리뷰 삭제하기</string>
    <string name="rev_me">작성한 리뷰</string>
    <string name="show_review">내가 작성한 리뷰 보기</string>
</resources>