<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4DFFC107"
    android:orientation="vertical"
    android:padding="15sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/GAEAER" />

        <TextView
            android:id="@+id/item_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AGEF" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WEAF" />

</LinearLayout>