<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="30sp"
    android:layout_marginTop="50sp"
    android:layout_marginHorizontal="40sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="120dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/potato"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!--            <TextView-->
            <!--                android:id="@+id/user_name"-->
            <!--                android:layout_width="200dp"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:layout_weight="2"-->
            <!--                android:gravity="center"-->
            <!--                android:text="@string/weaF"-->
            <!--                android:fontFamily="@font/scdream4"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="20sp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:fontFamily="@font/scdream5"
                    android:text="@string/czfv"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scdream4"
                    android:text="@string/cWfscd"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/growing_potato"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="10dp"
        android:background="@color/light_orange"
        android:text="@string/나의감자키우기"
        android:fontFamily="@font/scdream4"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/growing_fixinfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="10dp"
        android:background="@color/light_orange"
        android:text="@string/fixmyinfo"
        android:fontFamily="@font/scdream4"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favorite_store"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="10dp"
        android:background="@color/light_orange"
        android:text="@string/찜한가게"
        android:fontFamily="@font/scdream4"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/faq"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="10dp"
        android:background="@color/light_orange"
        android:text="@string/도움말"
        android:textSize="20sp"
        android:fontFamily="@font/scdream4"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="10dp"
        android:background="@color/light_orange"
        android:text="@string/공지사항"
        android:textSize="20sp"
        android:fontFamily="@font/scdream4"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/text_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="로그아웃"
        android:textColor="#656565" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:text="@string/오늘하루는맛있었나요"
        android:textSize="20sp"
        android:fontFamily="@font/scdream4"
        android:textColor="@color/black"
        android:gravity="center"/>
</LinearLayout>