<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sajang.StoreManagement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFC700"
            tools:ignore="NestedScrolling">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#FFC700"
                    android:text="@string/SCD"
                    android:textColor="#000000"
                    android:textSize="28dp"
                    android:fontFamily="@font/scdream5"
                    android:visibility="visible"
                    app:backgroundTint="#FFC700" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFC700"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/textView_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/DC"
                        android:fontFamily="@font/scdream5"
                        android:textStyle="normal"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/button_table"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#FF9800"
                            android:text="@string/table"
                            android:fontFamily="@font/scdream4"
                            android:textColor="#424242"
                            app:backgroundTint="#FF9800" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcy_1"
                            android:layout_width="match_parent"
                            android:layout_height="126dp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE589"
            tools:ignore="NestedScrolling">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/ACGFVZD"
                    android:textColor="#000000"
                    android:fontFamily="@font/scdream5"
                    android:textSize="28sp"
                    android:visibility="visible"
                    app:backgroundTint="#FFE589" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFE589"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/BZCswf"
                        android:fontFamily="@font/scdream5"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/timePickerDialogButton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/VDAFV"
                        android:fontFamily="@font/scdream4"
                        app:backgroundTint="#FF9800" />

                    <Button
                        android:id="@+id/timePickerDialogButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SZGRFE"
                        android:fontFamily="@font/scdream4"
                        app:backgroundTint="#FF9800" />

                    <TextView
                        android:id="@+id/textView_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/WSAfes"
                        android:fontFamily="@font/scdream4"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/textView_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/SAF"
                        android:fontFamily="@font/scdream4"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>
            </FrameLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFC700"
            tools:ignore="NestedScrolling">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC700">

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/fswd"
                    android:textColor="#000000"
                    android:textSize="28sp"
                    android:fontFamily="@font/scdream5"
                    android:visibility="visible"
                    app:backgroundTint="#FFC700" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/asadf"
                        android:fontFamily="@font/scdream5"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="32dp"
                        android:minHeight="48dp"
                        android:lineSpacingExtra="10sp"
                        android:fontFamily="@font/scdream4"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields"
                        android:autofillHints="" />

                    <Button
                        android:id="@+id/button_sajang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aWfxecD"
                        android:fontFamily="@font/scdream4"
                        app:backgroundTint="#FF9800" />

                </LinearLayout>
            </FrameLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE589"
            tools:ignore="NestedScrolling">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/AWVSA"
                    android:textColor="#000000"
                    android:textSize="28sp"
                    android:fontFamily="@font/scdream5"
                    android:visibility="visible"
                    app:backgroundTint="#FFE589" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFE589"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/AWXdcF"
                        android:fontFamily="@font/scdream5"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="13"
                            android:hint="@string/XZSGECFR"
                            android:minHeight="48dp"
                            android:fontFamily="@font/scdream4"
                            android:autofillHints=""
                            tools:ignore="TextFields" />

                        <Button
                            android:id="@+id/button_menu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/SEAGWVF"
                            android:fontFamily="@font/scdream5"
                            app:backgroundTint="#FF9800" />

                    </LinearLayout>

                    <ListView
                        android:id="@+id/listView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>
            </FrameLayout>
        </ScrollView>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="저장"
            android:fontFamily="@font/scdream5"
            app:backgroundTint="#FF9800" />
    </LinearLayout>

</ScrollView>