<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back_line"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:text="@string/waiting"
            android:textSize="20sp"
            android:fontFamily="@font/scdream4"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/num"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:hint="@string/num"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:inputType="number"
            android:maxLength="1"
            android:fontFamily="@font/scdream4"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/c"
                android:textSize="15sp"
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:scaleType="center"
                android:background="@color/main_orange"
                android:layout_marginRight="4dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/j"
                android:textSize="15sp"
                android:layout_marginLeft="4dp"
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:background="@color/main_orange"
                android:layout_gravity="center"
                android:layout_marginStart="4dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>